--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.8.0",
   "description": "Material Kit React. Coded by Creative Tim",
   "private": true,
-  "homepage": "http://csedayao.github.io/Website",
   "main": "dist/index.js",
+  "homepage": "http://csedayao.github.io/csedayao.github.io",
   "dependencies": {
     "@material-ui/core": "4.3.2",
     "@material-ui/icons": "4.2.1",
@@ -20,7 +20,8 @@
     "react-router-dom": "5.0.1",
     "react-scripts": "^3.4.1",
     "react-slick": "0.25.2",
-    "react-swipeable-views": "0.13.3"
+    "react-swipeable-views": "0.13.3",
+    "serve": "^11.3.2"
   },
   "devDependencies": {
     "@babel/cli": "7.5.5",
